--- a/rudrakshafinance/src/main/resources/templates/index.html
+++ b/rudrakshafinance/src/main/resources/templates/index.html
@@ -183,7 +183,7 @@
 									data-purecounter-duration="1"></span><span
 									style="display: inline;">+</span>
 								</span>
-								<p>Happy Clients</p>
+								<p>Clients</p>
 							</div>
 						</div>
 					</div>
