--- a/rudrakshafinance/src/main/resources/templates/index.html
+++ b/rudrakshafinance/src/main/resources/templates/index.html
@@ -838,12 +838,15 @@
 									<p>Contact Rudraksha Financial Services today for a free
 										consultation and take your first step toward financial
 										freedom.</p>
-									<h3
-										style="font-family: 'Roboto', sans-serif; font-size: 24px; color: #333;">
-										Overcome CIBIL Issues <a href="cibilapply"
-											style="display: inline-block; background-color: #FF5F1F; color: #fff; padding: 12px 24px; font-size: 16px; font-family: 'Roboto', sans-serif; border-radius: 6px; text-decoration: none; margin-left: 450px;">
+									<div
+										style="display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; font-family: 'Roboto', sans-serif; color: #333; padding: 10px;">
+										<h3 style="font-size: 24px; margin: 0;">Overcome CIBIL
+											Issues</h3>
+										<a href="cibilapply"
+											style="background-color: #FF5F1F; color: #fff; padding: 12px 24px; font-size: 16px; border-radius: 6px; text-decoration: none; margin-top: 10px;">
 											APPLY NOW </a>
-									</h3>
+									</div>
+
 								</div>
 							</div>
 						</div>
