--- a/src/main/resources/static/assets/css/apply.css
+++ b/src/main/resources/static/assets/css/apply.css
@@ -4,27 +4,19 @@
   box-sizing: border-box;
 }
 
-/*body {
-  font-family: Tahoma, Verdana, Segoe, sans-serif;
-  font-size: 14px;
-  background: #DCDCDC;
-  padding: 20px;
-  text-align: center;
-}*/
 body {
   font-family: Tahoma, Verdana, Segoe, sans-serif;
   font-size: 14px;
   background-image: url("/assets/img/login_bg.jpg"); /* Replace with your actual image path */
-  background-size: cover;                  /* Ensures it covers the whole screen */
-  background-position: center;             /* Centers the image */
-  background-repeat: no-repeat;            /* Prevents tiling */
+  background-size: cover;                  
+  background-position: center;            
+  background-repeat: no-repeat;            
   min-height: 100vh;
-  font-family: sans-serif;                 /* Optional: set a clean font */
-  margin-left: 0px;
-  padding: 0px;
+  margin-left: 0;
+  padding: 0;
 }
 
-
+/* Wrapper and face styles remain unchanged */
 .wrapper {
   width: 250px;
   height: 350px;
@@ -72,15 +64,23 @@ body {
   transition: all ease-in 0.25s;
   color: #030000;
 }
-.face .content .field-wrapper input[type=text], .face .content .field-wrapper input[type=password], .face .content .field-wrapper input[type=submit], .face .content .field-wrapper textarea {
+.face .content .field-wrapper input[type=text],
+.face .content .field-wrapper input[type=password],
+.face .content .field-wrapper input[type=submit],
+.face .content .field-wrapper textarea {
   -webkit-appearance: none;
   -moz-appearance: none;
-       appearance: none;
+  appearance: none;
 }
-.face .content .field-wrapper input[type=text]:focus, .face .content .field-wrapper input[type=password]:focus, .face .content .field-wrapper input[type=submit]:focus, .face .content .field-wrapper textarea:focus {
+.face .content .field-wrapper input[type=text]:focus,
+.face .content .field-wrapper input[type=password]:focus,
+.face .content .field-wrapper input[type=submit]:focus,
+.face .content .field-wrapper textarea:focus {
   outline: none;
 }
-.face .content .field-wrapper input[type=text], .face .content .field-wrapper input[type=password], .face .content .field-wrapper textarea {
+.face .content .field-wrapper input[type=text],
+.face .content .field-wrapper input[type=password],
+.face .content .field-wrapper textarea {
   width: 100%;
   border: none;
   background: transparent;
@@ -88,30 +88,37 @@ body {
   border-bottom: 1px solid #FF4500;
   color: #030000;
 }
-.face .content .field-wrapper input[type=text]::-webkit-input-placeholder, .face .content .field-wrapper input[type=password]::-webkit-input-placeholder, .face .content .field-wrapper textarea::-webkit-input-placeholder {
+.face .content .field-wrapper input[type=text]::-webkit-input-placeholder,
+.face .content .field-wrapper input[type=password]::-webkit-input-placeholder,
+.face .content .field-wrapper textarea::-webkit-input-placeholder {
   opacity: 0;
 }
-.face .content .field-wrapper input[type=text]::-moz-placeholder, .face .content .field-wrapper input[type=password]::-moz-placeholder, .face .content .field-wrapper textarea::-moz-placeholder {
+.face .content .field-wrapper input[type=text]::-moz-placeholder,
+.face .content .field-wrapper input[type=password]::-moz-placeholder,
+.face .content .field-wrapper textarea::-moz-placeholder {
   opacity: 0;
 }
-.face .content .field-wrapper input[type=text]:-ms-input-placeholder, .face .content .field-wrapper input[type=password]:-ms-input-placeholder, .face .content .field-wrapper textarea:-ms-input-placeholder {
+.face .content .field-wrapper input[type=text]:-ms-input-placeholder,
+.face .content .field-wrapper input[type=password]:-ms-input-placeholder,
+.face .content .field-wrapper textarea:-ms-input-placeholder {
   opacity: 0;
 }
-.face .content .field-wrapper input[type=text]:-moz-placeholder, .face .content .field-wrapper input[type=password]:-moz-placeholder, .face .content .field-wrapper textarea:-moz-placeholder {
-  opacity: 0;
+.face .content .field-wrapper input[type=text]:-moz-placeholder-shown:not(:focus) + label,
+.face .content .field-wrapper input[type=password]:-moz-placeholder-shown:not(:focus) + label,
+.face .content .field-wrapper textarea:-moz-placeholder-shown:not(:focus) + label {
+  top: 40%;
+  color: #030000;
 }
-.face .content .field-wrapper input[type=text]:not(:-moz-placeholder-shown) + label, .face .content .field-wrapper input[type=password]:not(:-moz-placeholder-shown) + label, .face .content .field-wrapper textarea:not(:-moz-placeholder-shown) + label {
-  top: -35%;
-  color: #FF4500;
-}
-.face .content .field-wrapper input[type=text]:focus + label, .face .content .field-wrapper input[type=text]:not(:placeholder-shown) + label, .face .content .field-wrapper input[type=password]:focus + label, .face .content .field-wrapper input[type=password]:not(:placeholder-shown) + label, .face .content .field-wrapper textarea:focus + label, .face .content .field-wrapper textarea:not(:placeholder-shown) + label {
+.face .content .field-wrapper input[type=text]:not(:placeholder-shown) + label,
+.face .content .field-wrapper input[type=password]:not(:placeholder-shown) + label,
+.face .content .field-wrapper textarea:not(:placeholder-shown) + label,
+.face .content .field-wrapper input[type=text]:focus + label,
+.face .content .field-wrapper input[type=password]:focus + label,
+.face .content .field-wrapper textarea:focus + label {
   top: -35%;
   color: #FF4500;
 }
 .face .content .field-wrapper input[type=submit] {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-       appearance: none;
   cursor: pointer;
   width: 100%;
   background: #FF4500;
@@ -120,6 +127,9 @@ body {
   border: 1px solid #FF4500;
   border-radius: 3px;
   padding: 5px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 .face .content .field-wrapper input[type=submit]:hover {
   opacity: 0.9;
@@ -131,12 +141,11 @@ body {
   resize: none;
   line-height: 1em;
 }
-.face .content .field-wrapper textarea:not(:-moz-placeholder-shown) + label {
+.face .content .field-wrapper textarea:not(:placeholder-shown) + label,
+.face .content .field-wrapper textarea:focus + label {
   top: -25%;
 }
-.face .content .field-wrapper textarea:focus + label, .face .content .field-wrapper textarea:not(:placeholder-shown) + label {
-  top: -25%;
-}
+
 .face .thank-you-msg {
   position: absolute;
   width: 200px;
@@ -146,7 +155,7 @@ body {
   color: #FF4500;
   left: 50%;
   top: 50%;
-  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 .face .thank-you-msg:after {
   position: absolute;
@@ -162,6 +171,7 @@ body {
   animation: success ease-in 0.15s forwards;
   animation-delay: 2.5s;
 }
+
 .face-front {
   transform: rotateY(0deg) translateZ(125px);
 }
@@ -182,37 +192,61 @@ body {
   height: 250px;
   transform: rotateX(-90deg) translateZ(225px);
 }
-
+/* ✅ FINAL NAVIGATION STYLES — Single Line, Balanced */
 .nav {
-  margin: 20px 0;
-  padding-top:50px;
-  padding-left: 150px; 
-   justify-content: center;
+  margin: 20px auto;
+  padding-top: 50px;
+  display: flex;
+  justify-content: space-evenly; /* Balanced spacing */
+  align-items: center;
+  flex-wrap: nowrap;
+  width: 100%;
+  max-width: 100vw; /* Prevents overflow */
+  overflow: hidden; /* No horizontal scroll */
+  padding-left: clamp(5px, 2vw, 20px);
+  padding-right: clamp(5px, 2vw, 20px);
 }
+
 .nav li {
-  display: inline-block;
-  list-style-type: none;
-  font-size: 1.5em;
-  margin: 0 30px;
+  list-style: none;
+  font-size: clamp(0.5rem, 1.2vw, 1rem); /* Shrink if needed */
   color: #080200;
-  position: relative;
-  cursor: pointer;
   font-weight: bold;
- 
+  white-space: nowrap;
+  flex-shrink: 1; /* Shrinks to avoid overflow */
+  text-align: center;
+  padding: 0 clamp(4px, 1vw, 10px);
+  position: relative;
 }
+
 .nav li:after {
   content: "";
   position: absolute;
   bottom: 0;
-  left: 0;
-  width: 20px;
+  left: 25%;
+  width: 50%;
   border-bottom: 1px solid #FF4500;
   transition: all ease-in 0.25s;
 }
+
 .nav li:hover:after {
+  left: 0;
   width: 100%;
 }
 
+.nav li button {
+  background-color: #FF4500;
+  border: none;
+  color: white;
+  font-size: clamp(9px, 1vw, 13px);
+  cursor: pointer;
+  padding: clamp(3px, 0.5vw, 6px) clamp(8px, 1.5vw, 14px);
+  border-radius: 5px;
+  white-space: nowrap;
+  width: 100%;
+}
+
+/* OTHER STYLES */
 .psw, .signup, .singin {
   display: block;
   margin: 20px 0;
@@ -224,20 +258,4 @@ body {
 
 small {
   font-size: 0.7em;
-}/*# sourceMappingURL=apply.css.map */
-
-.nav li button {
-  background-color: #FF4500;
-  border: none;
-  color: white;
-  font-size: 15px;
-  cursor: pointer;
-  padding: 7px 24px;  
-  border-radius: 5px;   
 }
-
-
-
-
-
-
