--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
 
 <!-- Main CSS File -->
 <link href="assets/css/main.css" rel="stylesheet" />
-<!--<link rel="stylesheet" href="/css/style.css"> -->
+<link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="index-page">
 	<header id="header" class="header d-flex align-items-center fixed-top">
@@ -105,7 +105,7 @@
 				<p data-aos="fade-up" data-aos-delay="200">Our Financial
 					Expertise At Your Service</p>
 				<h6 data-aos="fade-up" data-aos-delay="200"
-					style="padding-top: 50px;">Your information stays secure with
+					style="padding-top: 10px;">Your information stays secure with
 					us.</h6>
 				<div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300"
 					style="padding-top: 5px;">
@@ -128,16 +128,17 @@
 				<div class="row gy-4">
 					<div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 						<h3>
-							Welcome to Rudraksha Financial Services<br> Your trusted partner in
-							financial growth and stability.
+							Welcome to Rudraksha Financial Services<br> Your trusted
+							partner in financial growth and stability.
 						</h3>
 						<img src="assets/img/about_2.jpg" class="img-fluid rounded-4 mb-4"
 							alt="">
 						<p>We are a modern financial services company committed to
 							helping individuals and businesses make smarter financial
 							decisions with confidence and clarity.</p>
-						<p>Rudraksha Financial Services was founded with the vision of making
-							financial services accessible, transparent, and customer-focused.</p>
+						<p>Rudraksha Financial Services was founded with the vision of
+							making financial services accessible, transparent, and
+							customer-focused.</p>
 					</div>
 					<div class="col-lg-6" data-aos="fade-up" data-aos-delay="250">
 						<div class="content ps-0 ps-lg-5">
@@ -352,7 +353,7 @@
 						</div>
 					</div>
 					<!-- End Service Item -->
-					
+
 					<div class="col-xl-4 col-md-6" data-aos="zoom-in"
 						data-aos-delay="500">
 						<div class="service-item">
@@ -367,7 +368,8 @@
 								<a href="cclimit" class="stretched-link">
 									<h3>CC Limit</h3>
 								</a>
-								<p>More credit, less hassle – apply for a CC Limit increase today.</p>
+								<p>More credit, less hassle – apply for a CC Limit increase
+									today.</p>
 								<br> <a href="cclimit"
 									style="display: inline-block; background-color: #FF5F1F; color: #fff; padding: 12px 24px; font-size: 15px; font-family: 'Roboto', sans-serif; border-radius: 3px; text-decoration: none;">
 									APPLY NOW </a>
@@ -375,7 +377,7 @@
 						</div>
 					</div>
 					<!-- End Service Item -->
-					
+
 					<div class="col-xl-4 col-md-6" data-aos="zoom-in"
 						data-aos-delay="500">
 						<div class="service-item">
@@ -385,7 +387,7 @@
 							</div>
 							<div class="details position-relative">
 								<div class="icon">
-								<i class="bi bi-stack-overflow"></i>
+									<i class="bi bi-stack-overflow"></i>
 								</div>
 								<a href="odlimit" class="stretched-link">
 									<h3>OD Limit</h3>
@@ -417,9 +419,9 @@
 					<script type="application/json" class="swiper-config">
             {
               "loop": true,
-              "speed": 600,
+              "speed": 100,
               "autoplay": {
-                "delay": 4000
+                "delay": 1500
               },
               "slidesPerView": "auto",
               "pagination": {
@@ -808,7 +810,7 @@
 			<!-- /Services 2 Section -->
 
 			<!-- CIBIL CALL Section -->
-			<section id="CibilCall" class="team section light-background"
+			<section id="C6ibilCall" class="team section light-background"
 				style="text-align: justify; background-color: #ffffff;">
 
 				<!-- Section Title -->
@@ -838,12 +840,15 @@
 									<p>Contact Rudraksha Financial Services today for a free
 										consultation and take your first step toward financial
 										freedom.</p>
-									<h3
-										style="font-family: 'Roboto', sans-serif; font-size: 24px; color: #333;">
-										Overcome CIBIL Issues <a href="cibilapply"
-											style="display: inline-block; background-color: #FF5F1F; color: #fff; padding: 12px 24px; font-size: 16px; font-family: 'Roboto', sans-serif; border-radius: 6px; text-decoration: none; margin-left: 450px;">
+									<div
+										style="display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; font-family: 'Roboto', sans-serif; color: #333; padding: 10px;">
+										<h3 style="font-size: 24px; margin: 0;">Overcome CIBIL
+											Issues</h3>
+										<a href="cibilapply"
+											style="background-color: #FF5F1F; color: #fff; padding: 12px 24px; font-size: 16px; border-radius: 6px; text-decoration: none; margin-top: 10px;">
 											APPLY NOW </a>
-									</h3>
+									</div>
+
 								</div>
 							</div>
 						</div>
@@ -993,7 +998,8 @@
 							href="https://www.facebook.com/profile.php?id=61576110118130"><i
 							class="bi bi-facebook"></i></a> <a
 							href="https://www.instagram.com/rudrakshafinancialservices21?igsh=emJrd3FxNGNkMXRr"><i
-							class="bi bi-instagram"></i></a> <a href="https://www.linkedin.com/in/rudraksha-financial-services-2b7b69364/"><i
+							class="bi bi-instagram"></i></a> <a
+							href="https://www.linkedin.com/in/rudraksha-financial-services-2b7b69364/"><i
 							class="bi bi-linkedin"></i></a>
 					</div>
 				</div>
@@ -1057,14 +1063,14 @@
 	<div id="preloader"></div>
 
 	<!-- Vendor JS Files -->
-	<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-	<script src="assets/vendor/php-email-form/validate.js"></script>
-	<script src="assets/vendor/aos/aos.js"></script>
-	<script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-	<script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-	<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-	<script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-	<script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+	<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js" defer></script>
+	<script src="assets/vendor/php-email-form/validate.js" defer></script>
+	<script src="assets/vendor/aos/aos.js" defer></script>
+	<script src="assets/vendor/glightbox/js/glightbox.min.js" defer></script>
+	<script src="assets/vendor/purecounter/purecounter_vanilla.js" defer></script>
+	<script src="assets/vendor/swiper/swiper-bundle.min.js" defer></script>
+	<script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js" defer></script>
+	<script src="assets/vendor/isotope-layout/isotope.pkgd.min.js" defer></script>
 
 	<!-- Main JS File -->
 	<script src="assets/js/main.js" defer></script>
