Improved layout, added responsive design

--- a/rudrakshafinance/src/main/resources/templates/bt-topuploan.html
+++ b/rudrakshafinance/src/main/resources/templates/bt-topuploan.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>BT+Topup Loan - Rudraksha Financial Services</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
@@ -76,9 +77,9 @@
 
 			<div class="container d-flex flex-column align-items-center"
 				data-aos="fade-up">
-				<h1>
+				<h2>
 					<b>BALANCE TRANSFER & TOP-UP LOANS MADE EASY</b>
-				</h1>
+				</h2>
 				<p>Transfer your loan at a lower interest and top it up with
 					extra funds</p>
 				<a href="#apply" class="btn-get-started me-4"
