--- a/rudrakshafinance/src/main/resources/templates/index.html
+++ b/rudrakshafinance/src/main/resources/templates/index.html
@@ -123,7 +123,7 @@
 		<!-- /Hero Section -->
 
 		<!-- About Section -->
-		<section id="about" class="about section" style="text-align: justify;">
+		<section id="about" class="about section">
 			<div class="container">
 				<div class="row gy-4">
 					<div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -540,8 +540,7 @@
 												(Town & Country Planning) approvals</spab></li>
 											<li><i class="bi bi-check2-all"></i> <span>Land
 													use Diversion</span></li>
-											<li><i class="bi bi-check2-all"></i> <span>RERA
-													(Real Estate Regulatory Authority) registration</span></li>
+											<li><i class="bi bi-check2-all"></i> <span>RERA registration</span></li>
 										</b>
 									</ul>
 									<p>By financing key regulatory processes like TNC
@@ -809,7 +808,7 @@
 
 			<!-- CIBIL CALL Section -->
 			<section id="CibilCall" class="team section light-background"
-				style="text-align: justify; background-color: #ffffff;">
+				style="background-color: #ffffff;">
 
 				<!-- Section Title -->
 				<div class="container section-title" data-aos="fade-up"
@@ -818,14 +817,12 @@
 					<p>Loan for CIBIL Challenged Applicants</p>
 				</div>
 				<!-- End Section Title -->
-
 				<div class="container">
 					<div class="row gy-5">
-
 						<!-- Text Column -->
 						<div class="col-lg-8 col-md-6" data-aos="fade-up"
 							data-aos-delay="50">
-							<div class="member" style="text-align: justify;">
+							<div class="member">
 								<div class="pic">
 									<h3>Have you been denied a loan due to a low CIBIL score
 										or past defaults? You’re not alone—and you’re not out of
@@ -846,7 +843,6 @@
 											style="background-color: #FF5F1F; color: #fff; padding: 12px 24px; font-size: 16px; border-radius: 6px; text-decoration: none; margin-top: 10px;">
 											APPLY NOW </a>
 									</div>
-
 								</div>
 							</div>
 						</div>
@@ -876,10 +872,7 @@
 						<h3>Jatin Verma</h3>
 						<h4>Owner</h4>
 						<p>
-							<i class="bi bi-quote quote-icon-left"></i> <span>Our
-								company is led by Jatin Verma, a seasoned finance expert with
-								years of experience in property financing and a passion for
-								helping clients achieve their investment goals.</span> <i
+							<i class="bi bi-quote quote-icon-left"></i> <span>Under the visionary leadership of Jatin Verma, Rudraksha Financial Services provides reliable, client-focused financial solutions spanning the full spectrum of financial services.</span> <i
 								class="bi bi-quote quote-icon-right"></i>
 						</p>
 					</div>
