--- a/rudrakshafinance/src/main/resources/templates/mortgageloan.html
+++ b/rudrakshafinance/src/main/resources/templates/mortgageloan.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Mortgage Loan - Rudraksha Financial Services</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
@@ -76,9 +77,9 @@
 
 			<div class="container d-flex flex-column align-items-center"
 				data-aos="fade-up">
-				<h1>
+				<h2>
 					<b>SECURE YOUR PROPERTY, GET FUNDS EASILY</b>
-				</h1>
+				</h2>
 				<p>Apply for a Mortgage Loan with Flexible Terms</p>
 				<a href="#apply" class="btn-get-started me-4"
 					style="display: inline-block; text-align: center; width: 150px; margin-top: 60px;">Apply
