--- a/rudrakshafinance/src/main/resources/templates/projectloan.html
+++ b/rudrakshafinance/src/main/resources/templates/projectloan.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Project Loan - Rudraksha Financial Services</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
@@ -94,9 +95,9 @@ to {
 
 			<div class="container d-flex flex-column align-items-center"
 				data-aos="fade-up">
-				<h1>
+				<h2>
 					<b>TURN YOUR VISION INTO REALITY</b>
-				</h1>
+				</h2>
 				<p>Smart project financing solutions for every stage of your
 					business journey</p>
 				<a href="#apply" class="btn-get-started me-4"
