--- a/rudrakshafinance/src/main/resources/templates/homeloan.html
+++ b/rudrakshafinance/src/main/resources/templates/homeloan.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Home Loan - Rudraksha Financial Services</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
@@ -74,9 +75,9 @@
 
 			<div class="container d-flex flex-column align-items-center"
 				data-aos="fade-up">
-				<h1>
+				<h2>
 					<b>GET YOUR DREAM HOME WITH EASE</b>
-				</h1>
+				</h2>
 				<p>Home loans made simple, fast and stress-free</p>
 				<a href="#apply" class="btn-get-started me-4"
 					style="display: inline-block; text-align: center; width: 150px; margin-top: 60px;">Apply
