--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,6 @@
 
 <!-- Main CSS File -->
 <link href="assets/css/main.css" rel="stylesheet" />
-
 </head>
 <body class="index-page">
 	<header id="header" class="header d-flex align-items-center fixed-top">
@@ -885,20 +884,20 @@
 			<section id="contact" class="contact section">
 
 				<!-- Section Title -->
-				<div class="container section-title" data-aos="fade-up">
+				<div class="container section-title">
 					<h2>Contact</h2>
 					<p>Rudraksha Financial Services</p>
 				</div>
 				<!-- End Section Title -->
 
-				<div class="container" data-aos="fade-up" data-aos-delay="100">
+				<div class="container">
 					<div class="row gy-4">
 						<div class="col-lg-6 ">
 							<div class="row gy-3">
 								<div class="col-lg-12">
 									<div
 										class="info-item d-flex flex-column justify-content-center align-items-center"
-										data-aos="fade-up" data-aos-delay="200">
+										>
 										<i class="bi bi-geo-alt"></i>
 										<h3>Address</h3>
 										<p>PU4 Scheme No. 54 Plot No. 362, Second Floor</p>
@@ -911,19 +910,19 @@
 							<iframe
 								src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d117743.6684796838!2d75.81366548645516!3d22.747203270486345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x3962fdc1da42d223%3A0x6f9f3f0a7935f9c0!2sPU4%20Plot%2C%20No%20362%2C%20behind%20Malhar%20Mega%20Mall%2C%20Scheme%2054%20PU4%2C%20Indore%2C%20Madhya%20Pradesh%20452010!3m2!1d22.7472244!2d75.8960671!5e0!3m2!1sen!2sin!4v1746609274713!5m2!1sen!2sin"
 								width="100%" height="270" style="border: 0;" allowfullscreen=""
-								loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+							 referrerpolicy="no-referrer-when-downgrade"></iframe>
 						</div>
 
 						<div class="col-lg-6">
 							<form id="enquiry" method="post" action="/enquiry"
-								class="enquiry-form" data-aos="fade-up" data-aos-delay="500">
+								class="enquiry-form">
 
 								<div class="row gy-5">
 
 									<div class="col-md-6">
 										<div
 											class="info-item d-flex flex-column justify-content-center align-items-center"
-											data-aos="fade-up" data-aos-delay="300">
+											>
 											<i class="bi bi-telephone"></i>
 											<h3>Call Us</h3>
 											<p>9713776077</p>
@@ -934,7 +933,7 @@
 									<div class="col-md-6">
 										<div
 											class="info-item d-flex flex-column justify-content-center align-items-center"
-											data-aos="fade-up" data-aos-delay="400">
+											>
 											<i class="bi bi-envelope"></i>
 											<h3>Email Us</h3>
 											<p>rudrakshafinancialservices21@gmail.com</p>
