fixed animation delay issue

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -448,34 +448,34 @@
          </script>
 					<div class="swiper-wrapper align-items-center">
 						<div class="swiper-slide">
-							<img src="assets/img/banks/bank1.png" class="img-fluid" alt="">
+							<img src="assets/img/banks/bank1.png" class="img-fluid" loading="lazy" alt="">
 						</div>
 						<div class="swiper-slide">
-							<img src="assets/img/banks/bank2.png" class="img-fluid" alt="">
+							<img src="assets/img/banks/bank2.png" class="img-fluid" loading="lazy" alt="">
 						</div>
 						<div class="swiper-slide">
-							<img src="assets/img/banks/bank3.png" class="img-fluid" alt="">
+							<img src="assets/img/banks/bank3.png" class="img-fluid" loading="lazy" alt="">
 						</div>
 						<div class="swiper-slide">
-							<img src="assets/img/banks/bank4.png" class="img-fluid" alt="">
+							<img src="assets/img/banks/bank4.png" class="img-fluid" loading="lazy" alt="">
 						</div>
 						<div class="swiper-slide">
-							<img src="assets/img/banks/bank5.png" class="img-fluid" alt="">
+							<img src="assets/img/banks/bank5.png" class="img-fluid"  loading="lazy"alt="">
 						</div>
 						<div class="swiper-slide">
-							<img src="assets/img/banks/bank6.png" class="img-fluid" alt="">
+							<img src="assets/img/banks/bank6.png" class="img-fluid" loading="lazy" alt="">
 						</div>
 						<div class="swiper-slide">
-							<img src="assets/img/banks/bank7.png" class="img-fluid" alt="">
+							<img src="assets/img/banks/bank7.png" class="img-fluid" loading="lazy" alt="">
 						</div>
 						<div class="swiper-slide">
-							<img src="assets/img/banks/bank8.png" class="img-fluid" alt="">
+							<img src="assets/img/banks/bank8.png" class="img-fluid" loading="lazy" alt="">
 						</div>
 						<div class="swiper-slide">
-							<img src="assets/img/banks/bank9.png" class="img-fluid" alt="">
+							<img src="assets/img/banks/bank9.png" class="img-fluid" loading="lazy" alt="">
 						</div>
 						<div class="swiper-slide">
-							<img src="assets/img/banks/bank10.png" class="img-fluid" alt="">
+							<img src="assets/img/banks/bank10.png" class="img-fluid"  loading="lazy" alt="">
 						</div>
 					</div>
 					<div>
@@ -490,6 +490,7 @@
 					<br>
 				</div>
 			</div>
+			</section>
 			<!-- /Clients Section -->
 
 			<!-- Features Section -->
@@ -936,7 +937,7 @@
 											>
 											<i class="bi bi-envelope"></i>
 											<h3>Email Us</h3>
-											<p>rudrakshafinancialservices21@gmail.com</p>
+										<p style="max-width: 100%; word-wrap: break-word; line-height: 1.4;">rudrakshafinancialservices21@gmail.com</p>
 										</div>
 									</div>
 									<!-- End Info Item -->
@@ -1063,6 +1064,25 @@
 
 	<!-- Main JS File -->
 	<script src="assets/js/main.js" defer></script>
-
+	<script>
+	  window.addEventListener("load", function () {
+	    document.querySelectorAll('.init-swiper').forEach(function (swiperEl) {
+	      const configEl = swiperEl.querySelector('.swiper-config');
+	      if (configEl) {
+	        try {
+	          const config = JSON.parse(configEl.textContent);
+	          new Swiper(swiperEl, config);
+	        } catch (err) {
+	          console.error('Error parsing swiper config:', err);
+	        }
+	      }
+	    });
+	
+	    // Initialize AOS (if you're using it)
+	    if (typeof AOS !== 'undefined') {
+	      AOS.init();
+	    }
+	  });
+	</script>
 </body>
 </html>
