--- a/rudrakshafinance/src/main/resources/templates/index.html
+++ b/rudrakshafinance/src/main/resources/templates/index.html
@@ -105,7 +105,7 @@
 				<p data-aos="fade-up" data-aos-delay="200">Our Financial
 					Expertise At Your Service</p>
 				<h6 data-aos="fade-up" data-aos-delay="200"
-					style="padding-top: 50px;">Your information stays secure with
+					style="padding-top: 20px;">Your information stays secure with
 					us.</h6>
 				<div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300"
 					style="padding-top: 5px;">
@@ -417,9 +417,9 @@
 					<script type="application/json" class="swiper-config">
             {
               "loop": true,
-              "speed": 600,
+              "speed": 300,
               "autoplay": {
-                "delay": 4000
+                "delay": 1000
               },
               "slidesPerView": "auto",
               "pagination": {
@@ -495,7 +495,7 @@
 
 			<!-- Features Section -->
 			<section id="features" class="features section"
-				style="text-align: justify; background-color: #ffffff;">
+				style="background-color: #ffffff;">
 
 				<div class="container">
 					<ul class="nav nav-tabs row  d-flex" data-aos="fade-up"
@@ -937,7 +937,11 @@
 											data-aos="fade-up" data-aos-delay="400">
 											<i class="bi bi-envelope"></i>
 											<h3>Email Us</h3>
-											<p>rudrakshafinancialservices21@gmail.com</p>
+											<p style="max-width: 100%; word-wrap: break-word; line-height: 1.4; text-align: center;">
+												<span style="display: inline-block; text-align: center;">
+													rudrakshafinancialservices21<wbr>@gmail.com
+												</span>
+											</p>
 										</div>
 									</div>
 									<!-- End Info Item -->
