--- a/src/main/resources/templates/projectloan.html
+++ b/src/main/resources/templates/projectloan.html
@@ -217,7 +217,7 @@ to {
 
     try {
         // 2. Send data to backend
-        const response = await fetch('http://localhost:8080/api/apply/Project', {
+        const response = await fetch('/api/apply/Project', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
