--- a/src/main/resources/templates/homeloan.html
+++ b/src/main/resources/templates/homeloan.html
@@ -173,7 +173,7 @@
 
     try {
         // 2. Send data to backend
-        const response = await fetch('http://localhost:8080/api/apply/Home', {
+        const response = await fetch('/api/apply/Home', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
